--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,9 +1,20 @@
+@font-face {
+  font-family: 'Raleway';
+  src: url('Raleway-Light.ttf') format('truetype');
+  font-style: normal;
+  font-weight: normal;
+}
+
+body{
+  font-family: 'Raleway';
+}
+
 ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
     list-style-type: none;
-    background-color: #595353;
+    background-color: #554c4c;
   }
   
   li {
@@ -18,11 +29,11 @@ ul {
   }
   
   li a:hover {
-    background-color: #4eb9cc;
+    background-color: #cc4e4e;
   }
   
   .activo {
-    background-color: #20597d;
+    background-color: #7d2020;
   }
   
   .derecha {
@@ -32,7 +43,7 @@ ul {
   .miJumbo {
     margin-top: 1rem;
     padding: 32px 16px;
-    background-color: #206dba;
+    background-color: #ba2020;
     border-radius: 0.5rem;
     text-align: center;
     color: aliceblue;
